--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     display: flex;
     justify-content: center;
   }
+  #glcanvas {
+    background-color: white;
+  }
 </style>
 <body>
   <div class="canvas_container">
